@@ -287,6 +287,7 @@
 	- fix: always do rpmalMakeIndex.
 	- fix: resurrect --triggers (#73330).
 	- python: typo in NOKEY exception string.
+	- fix: parse pgp packets more carefully.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
